Fix a little bug
Fixed the problem of environment variable error
Upgrade Node.js version to v18.12.1-LTS

--- a/deb/pack/arm/DEBIAN/control
+++ b/deb/pack/arm/DEBIAN/control
@@ -2,7 +2,7 @@ Package:MCSManager
 Version:9
 Section:stable
 Priority:optional
-Depends:wget,curl,git,tar
+Depends:wget,curl,git,tar,sudo
 Suggests:language-pack-zh-hans,fonts-droid-fallback,ttf-wqy-zenhei,ttf-wqy-microhei,fonts-arphic-ukai,fonts-arphic-uming
 Architecture:arm
 Maintainer:unitwk
