--- a/docker/examples/cn/daemon.yaml
+++ b/docker/examples/cn/daemon.yaml
@@ -1,15 +1,17 @@
-version: "2.4"
+version: "3"
 
 services:
   daemon:
-    image: bluefunny/mcsm-daemon:latest
+    image: bluefunny/mcsmanager-daemon:latest
+    name: mcsmanager-daemon
+    environment:
+      - TZ=Asia/Shanghai
     volumes:
-      # 此处为 MCSManager 守护程序日志存储目录
-      # 默认为 [/var/logs/mcsmanager/daemon]
-      - /var/logs/mcsmanager/daemon:/logs
-
-      # 此处为 MCSManager 守护程序日志存储目录
-      # 默认为当前目录下的 data/daemon 文件夹
-      - ./data/daemon:/data
+      # MCSManager Daemon 日志存储目录
+      - /opt/mcsmanager/data/logs/daemon:/opt/daemon/logs
+      # MCSManager Daemon 数据存储目录
+      - /opt/mcsmanager/data/data/daemon:/opt/daemon/data
+    # port:
+    #   - 24444:24444
     network_mode: host
-    command: /start
+    command: /entrypoint.sh
