--- a/docker/examples/cn/full.yaml
+++ b/docker/examples/cn/full.yaml
@@ -8,9 +8,9 @@ services:
       - TZ=Asia/Shanghai
     volumes:
       # MCSManager Web 日志存储目录
-      - /opt/mcsmanager/data/logs/web:/opt/web/logs
+      - ./data/logs/web:/opt/web/logs
       # MCSManager Web 数据存储目录
-      - /opt/mcsmanager/data/data/web:/opt/web/data
+      - ./data/data/web:/opt/web/data
     # port:
     #   - 23333:23333 
     network_mode: host
@@ -23,9 +23,9 @@ services:
       - TZ=Asia/Shanghai
     volumes:
       # MCSManager Daemon 日志存储目录
-      - /opt/mcsmanager/data/logs/daemon:/opt/daemon/logs
+      - ./data/logs/daemon:/opt/daemon/logs
       # MCSManager Daemon 数据存储目录
-      - /opt/mcsmanager/data/data/daemon:/opt/daemon/data
+      - ./data/data/daemon:/opt/daemon/data
     # port:
     #   - 24444:24444
     network_mode: host
