--- a/docker/examples/cn/web.yaml
+++ b/docker/examples/cn/web.yaml
@@ -8,9 +8,9 @@ services:
       - TZ=Asia/Shanghai
     volumes:
       # MCSManager Web 日志存储目录
-      - /opt/mcsmanager/data/logs/web:/opt/web/logs
+      - ./data/logs/web:/opt/web/logs
       # MCSManager Web 数据存储目录
-      - /opt/mcsmanager/data/data/web:/opt/web/data
+      - ./data/data/web:/opt/web/data
     # port:
     #   - 23333:23333 
     network_mode: host
