Fix a naming error

--- a/docker/examples/cn/full.yaml
+++ b/docker/examples/cn/full.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   web:
-    image: bluefunny/mcsmanager-web:latest
+    image: bluefunny/mcsmanager:web-9
     container_name: mcsmanager-web
     environment:
       - TZ=Asia/Shanghai
@@ -17,7 +17,7 @@ services:
     command: /entrypoint.sh
 
   daemon:
-    image: bluefunny/mcsmanager-daemon:latest
+    image: bluefunny/mcsmanager:daemon-9
     container_name: mcsmanager-daemon
     environment:
       - TZ=Asia/Shanghai
