--- a/docker/examples/cn/daemon.yaml
+++ b/docker/examples/cn/daemon.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   daemon:
-    image: bluefunny/mcsmanager-daemon:latest
+    image: bluefunny/mcsmanager:daemon-9
     container_name: mcsmanager-daemon
     environment:
       - TZ=Asia/Shanghai
