--- a/templates-config.json
+++ b/templates-config.json
@@ -14,6 +14,7 @@
   "packages": [
     {
       "title": "幻兽帕鲁官方服务器",
+      "language": "zh_cn",
       "platform": "Windows",
       "description": "适用于 Windows 的帕鲁们的最佳服务器！",
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/palworld.webp",
@@ -38,6 +39,7 @@
     },
     {
       "title": "幻兽帕鲁官方服务器",
+      "language": "zh_cn",
       "platform": "Linux",
       "description": "本模板使用 Docker 安装，Linux 服务器必须安装 Docker！安装后默认的密码是 123456，修改请前往环境变量处修改。",
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/palworld.webp",
@@ -75,6 +77,7 @@
     },
     {
       "title": "僵尸毁灭工程",
+      "language": "zh_cn",
       "platform": "Linux",
       "description": "适用于 Linux 系统，使用《僵尸毁灭工程》第三方 Docker 镜像，快速开服！",
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/pzomboid.webp",
@@ -116,6 +119,7 @@
 
     {
       "title": "Terraria 服务器",
+      "language": "zh_cn",
       "platform": "Linux",
       "description": "适用于 Linux 系统，使用《Terraria》第三方 Docker 镜像，快速开服！",
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/terraria.webp",
@@ -158,6 +162,7 @@
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/minecraft.webp",
       "gameType": "Minecraft",
       "title": "Minecraft 1.21.1 快速开服",
+      "language": "zh_cn",
       "category": "mc-paper",
       "runtime": "Java 17+",
       "hardware": "RAM 4G+",
@@ -175,6 +180,7 @@
       }
     },
     {
+      "language": "zh_cn",
       "platform": "ALL",
       "description": "[Paper] 中小型互通服推荐，1.20.4 版本，快速开服，包含ESS、锁箱子、操作回滚、领地商店等基础插件。",
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/minecraft.webp",
@@ -197,6 +203,7 @@
       }
     },
     {
+      "language": "zh_cn",
       "platform": "ALL",
       "description": "注意：默认的启动命令是 \"sh ./run.sh\"，如果需要在 Windows 上运行，请在安装后将命令修改为 \"start.bat\"",
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/minecraft.webp",
@@ -219,6 +226,7 @@
       }
     },
     {
+      "language": "zh_cn",
       "platform": "ALL",
       "description": "注意：默认的启动命令是 \"sh ./run.sh\"，如果需要在 Windows 上运行，请在安装后将命令修改为 \"start.bat\"",
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/minecraft.webp",
@@ -241,6 +249,7 @@
       }
     },
     {
+      "language": "zh_cn",
       "platform": "ALL",
       "description": "注意：默认的启动命令是 \"sh ./run.sh\"，如果需要在 Windows 上运行，请在安装后将命令修改为 \"start.bat\"",
       "image": "https://mcsmanager.oss-cn-guangzhou.aliyuncs.com/package-images/minecraft.webp",
